--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "css:generate": "node scripts/generate-css.js"
   },
   "dependencies": {
     "clsx": "^2.1.1",
