--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "dompurify": "^3.1.5",
     "lucide-react": "^0.397.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "showdown": "^2.1.0",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
