--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/showdown": "^2.0.6",
     "chalk": "^4.1.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
