--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "css:generate": "node scripts/generate-css.js"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "clsx": "^2.1.1",
     "dompurify": "^3.1.5",
     "lucide-react": "^0.397.0",
