--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18",
     "react-dom": "^18",
     "showdown": "^2.1.0",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "use-synced": "^1.0.0"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
