--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
     "clsx": "^2.1.1",
-    "dompurify": "^3.1.5",
+    "isomorphic-dompurify": "^2.12.0",
     "lucide-react": "^0.397.0",
     "next": "14.2.4",
     "react": "^18",
