--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "showdown": "^2.1.0",
     "tailwind-merge": "^2.3.0"
   },
