--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-next": "14.2.4",
     "front-matter": "^4.0.2",
     "generate-github-markdown-css": "^6.3.0",
+    "joi": "^17.13.3",
     "postcss": "^8",
     "sass": "^1.77.6",
     "tailwindcss": "^3.4.1",
