--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "animejs": "^3.2.2",
     "clsx": "^2.1.1",
     "isomorphic-dompurify": "^2.12.0",
     "lucide-react": "^0.397.0",
@@ -30,6 +31,7 @@
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@types/animejs": "^3.1.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
